# QuickEDA

./: README.md  app.py  pyproject.toml
artifacts/: Titanic-Dataset.parquet
pages/: 1_Load_Data.py  1_Numerical Features.py  2_Columns.py  3_Explore.py  4_Feature_Lab.py
src/: features.py  io.py  profiling.py  state.py
